<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.views.SearchActivity">

    <TextView
        android:id="@+id/tvFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnCancel"
        android:layout_alignBottom="@+id/etFromDateTime"
        android:text="From: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_alignParentTop="true"
        android:layout_marginTop="98dp"
        android:text="To: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvToDateTime"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_centerVertical="true"
        android:text="Keywords: "
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lat: "
        android:textSize="24sp"
        android:translationY="450px" />

    <TextView
        android:id="@+id/tvLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:text="Lng: "
        android:textSize="24sp"
        android:translationY="450px" />

    <EditText
        android:id="@+id/etLat"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:layout_marginStart="-121dp"
        android:ems="10"
        android:textSize="24sp"
        android:translationY="450px" />

    <EditText
        android:id="@+id/etLng"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvLng"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:textSize="24sp"
        android:translationY="450px" />

    <EditText
        android:id="@+id/etKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:layout_centerVertical="true"
        android:ems="10"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:onClick="cancel"
        android:text="Cancel" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="128dp"
        android:onClick="go"
        android:text="Go" />
</RelativeLayout>