<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.views.MainActivity">

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="356dp"
        android:layout_height="450dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="250dp"
        android:contentDescription="@string/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />
    <!--app:layout_constraintBottom_toTopOf="@+id/location"-->

    <!--app:layout_constraintStart_toEndOf="@+id/snap" app:layout_constraintTop_toBottomOf="@+id/timestamp"
    app:layout_constraintBottom_toTopOf="@+id/search" app:layout_constraintEnd_toEndOf="parent"-->

    <Button
        android:id="@+id/snap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="takePhoto"
        android:text="@string/snap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:onClick="scrollPhotos"
        android:text="next"
        app:layout_constraintBaseline_toBaselineOf="@+id/snap"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:onClick="scrollPhotos"
        android:text="prev"
        app:layout_constraintBaseline_toBaselineOf="@+id/snap"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"

        android:layout_marginEnd="55dp"
        android:layout_marginBottom="210dp"
        android:text="@string/date_and_time"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginBottom="9dp"
        android:onClick="launchSearchActivity"
        android:text="search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivGallery" />

    <Button
        android:id="@+id/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="102dp"
        android:onClick="getImageLocation"
        android:text="ImgLocation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivGallery" />

    <!--    <Button-->
    <!--        android:id="@+id/setLatLng"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignStart="@+id/ivGallery"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_marginStart="273dp"-->
    <!--        android:layout_marginBottom="102dp"-->
    <!--        android:onClick="setLatLng"-->
    <!--        android:text="Set"-->
    <!--        tools:layout_editor_absoluteX="291dp"-->
    <!--        tools:layout_editor_absoluteY="635dp" />-->

    <Button
        android:id="@+id/setLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="237dp"
        android:layout_marginBottom="104dp"
        android:onClick="setLatLng"
        android:text="Set LatLng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivGallery" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:onClick="shareFile"
        android:text="Share"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/latlong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="4dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>