<resources>
    <string name="app_name">Assignment1</string>
    <string name="snap">snap</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="date_and_time">Date and time</string>
</resources>